--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,8 @@ bio = "GitHub Cofounder & CEO\nLikes tater tots and beer."
 dob = 1979-05-27T07:32:00Z # First class dates? Why not?
 
 [database]
-server = "192.168.1.1"
-ports = [ 8001, 8001, 8002 ]
+server = "10.211.55.4"
+ports = "3306"
 connection_max = 5000
 enabled = true
+dirver = "mysql"
